Fix line breaks in size form

--- a/css/style.scss
+++ b/css/style.scss
@@ -177,7 +177,7 @@ a:hover {
 input[type="number"] {
 	width: 60px;
 }
-form > * {
+#font-section form > * {
 	display: block;
 }
 label:not(:first-child) {
